Renamed repository to dw-component-lib

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -2,7 +2,7 @@
 
 # Introduction
 
-`dw-react-lib` is a collection of packages designed to help you in developing React and/or TypeScript projects.
+`dw-component-lib` is a collection of packages designed to help you in developing React and/or TypeScript projects.
 
 The currently included packages are:
 
