Added link to github repository

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -2,6 +2,8 @@
 
 # Introduction
 
+[![Link to GitHub repository](https://img.shields.io/static/v1?label=@dlw-digitalworkplace&message=dw-component-lib&color=c42828&logo=github&style=for-the-badge)](https://github.com/dlw-digitalworkplace/dw-component-lib)
+
 `dw-component-lib` is a collection of packages designed to help you in developing React and/or TypeScript projects.
 
 The currently included packages are:
