Update theming support and add default validation when too many items are selected

--- a/packages/dw-react-controls/src/components/TaxonomyPicker/TaxonomyPicker.stories.mdx
+++ b/packages/dw-react-controls/src/components/TaxonomyPicker/TaxonomyPicker.stories.mdx
@@ -40,7 +40,7 @@ To add a term you can:
 </Canvas>
 
 When creating a new term using the `TermPicker`, a success or failure message is shown. These messages can be
-overwritten using the `onGetSuccessMessage` and `onGetErrorMessage` callbacks.
+overwritten using the `onReceiveTermCreationSuccessMessage` and `onReceiveTermCreationFailedMessage` callbacks.
 
 ## Properties
 
