--- a/stories/Contribution.stories.mdx
+++ b/stories/Contribution.stories.mdx
@@ -1,37 +1,60 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta, Link } from "@storybook/addon-docs";
 
 <Meta title="Getting Started/Contributing" />
 
-## Contributing
+# Contributing
 
 If you are looking to contribute to this package than this page contains all the needed information.
 
-### Prerequisites
+## 1. Prerequisites
  - Node.js (recomended version v12 LTS)
  - Yarn (recomended version v1.22.15)
 
-### Minimal path to awesome
+## 2. Minimal path to awesome
 Use the steps below to install and run the code.
  1. Pull the code from [GitHub](https://github.com/dlw-digitalworkplace/dw-component-lib)
  2. Run `yarn install` in the root folder of the project
  3. Run `yarn build` in the root of the folder
  4. Run `yarn start` in the root of the folder.
  5. Choose an application you want to start
-    - @dlw-digitalworkplace/dw-component-lib - starts the storybook
-	  - @dw-react-app/demo-spfx-app - runs a demo SPFx project which uses the component library
+	1. @dlw-digitalworkplace/dw-component-lib - starts the storybook
+	2. @dw-react-app/demo-spfx-app - runs a demo SPFx project which uses the component library
 
 > **Warning**: Errors might occur when using `yarn install` in PowerShell. Best to use CMD for installation purposes.
 
-### TO DO: Contribution guidelines
- - Branches (naming, starting from, ...)
+## 3. Contributing
+
+
+ - Creating PR.
  - Adding components
  - Adding packages
  - Adding stories
  - Dev Tips
  - Generating change logs
- - Creating PR.
  - ...
- --> Goal is to have complete guide that devs can follow step by step to push code
+ -> Goal is to have complete guide that devs can follow step by step to push code
+
+
+The list below gives an overview of different topics that will help you to contribute to the project
+
+1. <a href="#1-branching">Branching</a>
+2. <a href="#2-creating-a-pr">Creating a PR</a>
+
+### 1. Branching
+The default branch of this project is `master`.
+This branch always contains the latest production code.
+
+If you want to contribute to this repo, you should create a new branch that starts from `master`.
+Depending on the the type of contribution the naming convention is as follows:
+
+| Branch naming                | Used for                                           															    |
+|------------------------------|--------------------------------------------------------------------------------------|
+| features/name-of-the-feature |  <ul><li>New components</li><li>New packages</li><li>New demo's</li><li>...</li></ul>|
+| bugs/name-of-the-bug         |  <ul><li>Component bugfixes</li><li>Documentation fixes</li><li>...</li></ul>				|
+
+### 2. Creating a PR
+
+
 
 
 
