Fix PR comments

--- a/packages/dw-react-controls/src/components/PeoplePicker/stories/PeoplePicker.stories.mdx
+++ b/packages/dw-react-controls/src/components/PeoplePicker/stories/PeoplePicker.stories.mdx
@@ -10,7 +10,7 @@ import * as stories from "./PeoplePicker.stories";
 # PeoplePicker
 
 The `PeoplePicker` controls allows you to select users and groups.
-This control is basically a rework of the [Fluient UI](https://developer.microsoft.com/en-us/fluentui#/controls/web/peoplepicker) people picker without the dependency on the Persona object.
+This control is basically a rework of the [Fluent UI](https://developer.microsoft.com/en-us/fluentui#/controls/web/peoplepicker) people picker without the dependency on the Persona object.
 The advantage of this is that you don't have to map user objects to 'PrimaryText' or 'SecondaryText' values.
 Only the basic properties of a user or group are required (id, displayName, userPrincipalName, groupType).
 The control supports the basic picker functionalities like required, disabled, suggestions, ...
@@ -24,7 +24,7 @@ This means that the people picker control itself is unaware of where the data is
 	<Story story={stories.Basic} name="Basic usage" />
 </Canvas>
 
-### Custom suggetions rendering
+### Custom suggestions rendering
 
 By default the following properties are shown in the suggestion dropdown:
  - User: displayName, userPrincipalName
