--- a/stories/Contribution.stories.mdx
+++ b/stories/Contribution.stories.mdx
@@ -7,8 +7,8 @@ import { Meta, Link } from "@storybook/addon-docs";
 If you are looking to contribute to this package than this page contains all the needed information.
 
 ## 1. Prerequisites
- - Node.js (recomended version v12 LTS)
- - Yarn (recomended version v1.22.15)
+ - Node.js (recommended version v12 LTS)
+ - Yarn (recommended version v1.22.15)
 
 ## 2. Minimal path to awesome
 Use the steps below to install and run the code.
@@ -45,7 +45,7 @@ The default branch of this project is `master`.
 This branch always contains the latest production code.
 
 If you want to contribute to this repo, you should create a new branch that starts from `master`.
-Depending on the the type of contribution the naming convention is as follows:
+Depending on the type of contribution the naming convention is as follows:
 
 | Branch naming                | Used for                                           															    |
 |------------------------------|--------------------------------------------------------------------------------------|
