Fix useDrag story typo

--- a/packages/dw-react-utils/src/stories/hooks/useDrag.stories.mdx
+++ b/packages/dw-react-utils/src/stories/hooks/useDrag.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs";
 import * as stories from "./useDrag.stories";
 import { useDrag } from "../../hooks"
 
-<Meta title="Utils/hooks/useDrag" component={useDrag	}/>
+<Meta title="Utils/hooks/useDrag" component={ useDrag	}/>
 
 # useDrag
 
@@ -13,7 +13,7 @@ The hook has the following input:
 
 The hook provides the following output:
  - isDragging: boolean to indicate is the element is being dragged or not
- - positionX / positionY: a number providing the moved possition of the element
+ - positionX / positionY: a number providing the moved position of the element
 
 > **Important:** The target must be in a non static position (e.g. relative)
 
