--- a/packages/dw-react-controls/src/components/PeoplePicker/stories/PeoplePicker.stories.mdx
+++ b/packages/dw-react-controls/src/components/PeoplePicker/stories/PeoplePicker.stories.mdx
@@ -9,7 +9,7 @@ import * as stories from "./PeoplePicker.stories";
 
 # PeoplePicker
 
-The `PeoplePicker` controls allows you to select users and groups.
+The `PeoplePicker` control allows you to select users and groups.
 This control is basically a rework of the [Fluent UI](https://developer.microsoft.com/en-us/fluentui#/controls/web/peoplepicker) people picker without the dependency on the Persona object.
 The advantage of this is that you don't have to map user objects to 'PrimaryText' or 'SecondaryText' values.
 Only the basic properties of a user or group are required (id, displayName, userPrincipalName, groupType).
