--- a/packages/dw-react-controls/src/components/TaxonomyPicker/stories/TaxonomyPicker.stories.mdx
+++ b/packages/dw-react-controls/src/components/TaxonomyPicker/stories/TaxonomyPicker.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs";
 import * as stories from "./TaxonomyPicker.stories";
-import { TaxonomyPicker } from "./TaxonomyPicker";
-import { TaxonomyPickerDialog } from "./TaxonomyPickerDialog";
-import { TermAdder } from "./TermAdder";
-import { TermPicker } from "../TermPicker";
+import { TaxonomyPicker } from "../TaxonomyPicker";
+import { TaxonomyPickerDialog } from "../TaxonomyPickerDialog";
+import { TermAdder } from "../TermAdder";
+import { TermPicker } from "../../TermPicker";
 
 <Meta
 	title="Components/TaxonomyPicker"
