Add version badge to sharepoint tax provider package

--- a/packages/taxonomyProviders/sharepoint/src/stories/SharePointTaxonomyProvider.stories.mdx
+++ b/packages/taxonomyProviders/sharepoint/src/stories/SharePointTaxonomyProvider.stories.mdx
@@ -4,6 +4,8 @@ import { Meta } from "@storybook/addon-docs";
 
 # SharePoint Taxonomy Provider
 
+![taxonomyprovider-sharepoint package version](https://img.shields.io/github/package-json/v/dlw-digitalworkplace/dw-component-lib?filename=packages%2FtaxonomyProviders%2Fsharepoint%2Fpackage.json&label=%40dlw-digitalworkplace%2Ftaxonomyprovider-sharepoint&logo=github)
+
 The `SharePointTaxonomyProvider` provides TermSet data using the `SP.Taxonomy.js` API. It can only be used when the
 application is hosted on a SharePoint page.
 
