--- a/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
+++ b/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/addon-docs";
+import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs";
 
 <Meta title="PeoplePickerProviders/Graph" />
 
@@ -17,25 +17,52 @@ yarn add @dlw-digitalworkplace/peoplepickerprovider-graph
 ## Usage
 
 ```tsx
-import { GraphPeoplePickerProvider } from "@dlw-digitalworkplace/peoplepickerprovider-graph";
+import { GraphPeoplePickerProvider, GroupType, ResourceType } from "@dlw-digitalworkplace/peoplepickerprovider-graph";
 
-const provider = new GraphPeoplePickerProvider(
-	graphToken,
-	shouldIncludeUsers /* optional */,
-	shouldIncludeGroups /* optional */
-);
+const provider = new GraphPeoplePickerProvider(graphToken, {
+	resourceTypes: ResourceType.User | ResourceType.Group,
+	groupTypes: GroupType.M365 | GroupType.Security | GroupType.Distribution /* optional */
+});
+
+// or with a function to retrieve the Graph token
+
+const provider = new GraphPeoplePickerProvider(() => aadTokenProvider.getToken("https://graph.microsoft.com"), {
+	resourceTypes: ResourceType.User | ResourceType.Group,
+	groupTypes: GroupType.M365 | GroupType.Security | GroupType.Distribution /* optional */
+});
 ```
 
 ## Documentation
 
-The `GraphPeoplePickerProvider`'s methods are described here:
+The `GraphPeoplePickerProvider`'s methods and supporting types are described here:
 
 ### `Constructor`
 
 Creates a new `GraphPeoplePickerProvider` object.
 
-| Parameter                             | Type      | Description                                                  | Default value |
-| ------------------------------------- | --------- | ------------------------------------------------------------ | ------------- |
-| graphToken<span class="req">\*</span> | `string`  | Authentication token used to send requests to the API.       |               |
-| includeUsers                          | `boolean` | Specifies if users should be included in the search result.  | `true`        |
-| includeGroups                         | `boolean` | Specifies if groups should be included in the search result. | `true`        |
+| Parameter                                     | Type                                              | Description                                                                                                          |
+| --------------------------------------------- | ------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
+| graphTokenProvider<span class="req">\*</span> | `string \| (() => string \| PromiseLike<string>)` | Authentication token used to send requests to the API. Either a string, or a function returning a string or Promise. |
+| options                                       | `IGraphPeoplePickerProviderOptions`               | Specifies options for the provider.                                                                                  |
+
+### `IGraphPeoplePickerProviderOptions`
+
+| Property                                 | Type           | Description                                                                                                      |
+| ---------------------------------------- | -------------- | ---------------------------------------------------------------------------------------------------------------- |
+| resourceTypes<span class="req">\*</span> | `ResourceType` | The type(s) of resources to search for.                                                                          |
+| groupTypes                               | `GroupType`    | If `Group` is specified in the `resourceTypes`, then this property specifies the type(s) of group to search for. |
+
+### `ResourceType`
+
+| Enum value | Numeric value |
+| ---------- | ------------- |
+| User       | `1`           |
+| Group      | `2`           |
+
+### `GroupType`
+
+| Enum value   | Numeric value |
+| ------------ | ------------- |
+| M365         | `1`           |
+| Security     | `2`           |
+| Distribution | `4`           |
