add sharepoint peoplepickerprovider

--- a/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
+++ b/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
@@ -43,7 +43,7 @@ Creates a new `GraphPeoplePickerProvider` object.
 | Parameter                                     | Type                                              | Description                                                                                                          |
 | --------------------------------------------- | ------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
 | graphTokenProvider<span class="req">\*</span> | `string \| (() => string \| PromiseLike<string>)` | Authentication token used to send requests to the API. Either a string, or a function returning a string or Promise. |
-| options                                       | `IGraphPeoplePickerProviderOptions`               | Specifies options for the provider.                                                                                  |
+| options<span class="req">\*</span>            | `IGraphPeoplePickerProviderOptions`               | Specifies options for the provider.                                                                                  |
 
 ### `IGraphPeoplePickerProviderOptions`
 
