added missing entries in docs

--- a/packages/dw-react-controls/stories/Introduction.stories.mdx
+++ b/packages/dw-react-controls/stories/Introduction.stories.mdx
@@ -21,6 +21,7 @@ yarn add @dlw-digitalworkplace/dw-react-controls
 
 The package exports the following top-level controls:
 
+- [PeoplePicker](?path=/docs/components-peoplepicker--basic)
 - [TaxonomyPicker](?path=/docs/components-taxonomypicker--basic)
 - [TreeView](?path=/docs/components-treeview--basic)
 
