--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -18,6 +18,10 @@ The currently included packages are:
   when receiving new data in the background.
 - **taxonomyprovider-...** - Taxonomy providers which can be used in the `TaxonomyPicker` control.
   - **sharepoint** - receives its data from the `SP.Taxonomy.js` API. This can be used when hosting on a SharePoint page.
+- **peoplepickerprovider-...** - User and group data providers which can be used in the `PeoplePicker` control.
+  - **graph** - receives its data from the Microsoft Graph API.
+  - **sharepoint** - receives its data from the SharePoint Rest API by default, or when enabled, tries first through the Graph API.
+- **dw-spfx-controls** - a collection of reusable SharePoint Framework controls, enabling consistent UI and functionality aimed at SPFx webparts.
 
 ## Installation
 
