deprecate unnecessary custom utilities

--- a/packages/dw-react-controls/src/utilities/stories/composeRenderFunction.stories.mdx
+++ b/packages/dw-react-controls/src/utilities/stories/composeRenderFunction.stories.mdx
@@ -2,7 +2,10 @@ import { Meta } from "@storybook/addon-docs";
 
 <Meta title="Components/Utilities/composeRenderFunction" />
 
-# composeRenderFunction
+# composeRenderFunction (deprecated)
+
+> ⚠️ The custom `composeRenderFunction` hook is **deprecated** in favor of `@fluentui/react`'s version.
+> Use `import { composeRenderFunction } from "@fluentui/react;` when possible.
 
 The `composeRenderFunction` function returns a function which allows you to provide overrideable render callbacks.
 
