--- a/packages/dw-react-controls/src/utilities/stories/useTheme.stories.mdx
+++ b/packages/dw-react-controls/src/utilities/stories/useTheme.stories.mdx
@@ -1,8 +1,11 @@
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="Components/Utilities/useTheme" />
+<Meta title="Components/Utilities/useTheme (deprecated)" />
 
-# useTheme
+# useTheme (deprecated)
+
+> ⚠️ The custom `useTheme` hook is **deprecated** in favor of `@fluentui/react`'s version.
+> Use `import { useTheme } from "@fluentui/react;` when possible.
 
 The `useTheme` hook provides access to the currently applied theme.
 
