stop using deprecated utils

--- a/packages/dw-react-controls/stories/Introduction.stories.mdx
+++ b/packages/dw-react-controls/stories/Introduction.stories.mdx
@@ -35,5 +35,5 @@ Additionally, the package exports the following supporting controls:
 
 The package also exports some utilities which support the usage of `React` controls in a FluentUI context:
 
-- [composeRenderFunction](?path=/docs/components-utilities-composerenderfunction--page)
-- [useTheme](?path=/docs/components-utilities-usetheme--page)
+- [composeRenderFunction (deprecated)](?path=/docs/components-utilities-composerenderfunction-deprecated--page)
+- [useTheme (deprecated)](?path=/docs/components-utilities-usetheme-deprecated--page)
