add id override example

--- a/packages/dw-react-utils/src/stories/hooks/useId.stories.mdx
+++ b/packages/dw-react-utils/src/stories/hooks/useId.stories.mdx
@@ -10,6 +10,11 @@ The `useId` hook allows you to generate a unique id for a component.
 
 ```tsx
 const id = useId();
+
+// or
+
+const { customId } = props;
+const id = useId(customId);
 ```
 
 ## Example
