change type endpoint property to literal string

--- a/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
+++ b/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
@@ -59,7 +59,7 @@ Creates a new `GraphPeoplePickerProvider` object.
 | ---------------------------------------- | -------------- | ---------------------------------------------------------------------------------------------------------------- |
 | resourceTypes<span class="req">\*</span> | `ResourceType` | The type(s) of resources to search for.                                                                          |
 | groupTypes                               | `GroupType`    | If `Group` is specified in the `resourceTypes`, then this property specifies the type(s) of group to search for. |
-| useMeEndpoint                            | `boolean`      | Specifies what endpoint the provider should use, either /me/people or /users                                     |
+| endpoint                                 | `"users" | "me/people"`      | Specifies what endpoint the provider should use, either /me/people or /users                                     |
 
 ### `ResourceType`
 
