--- a/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
+++ b/packages/peoplePickerProviders/graph/src/stories/GraphPeoplePickerProvider.stories.mdx
@@ -22,7 +22,7 @@ import { GraphPeoplePickerProvider, GroupType, ResourceType } from "@dlw-digital
 const provider = new GraphPeoplePickerProvider(graphToken, {
 	resourceTypes: ResourceType.User | ResourceType.Group,
 	groupTypes: GroupType.M365 | GroupType.Security | GroupType.Distribution, /* optional */
-	useMeEndpoint: true | false /* optional */
+	endpoint: "users" | "me/people" /* optional */
 });
 
 // or with a function to retrieve the Graph token
@@ -30,7 +30,7 @@ const provider = new GraphPeoplePickerProvider(graphToken, {
 const provider = new GraphPeoplePickerProvider(() => aadTokenProvider.getToken("https://graph.microsoft.com"), {
 	resourceTypes: ResourceType.User | ResourceType.Group,
 	groupTypes: GroupType.M365 | GroupType.Security | GroupType.Distribution, /* optional */
-	useMeEndpoint: true | false /* optional */
+	endpoint: "users" | "me/people" /* optional */
 });
 ```
 
@@ -59,7 +59,7 @@ Creates a new `GraphPeoplePickerProvider` object.
 | ---------------------------------------- | -------------- | ---------------------------------------------------------------------------------------------------------------- |
 | resourceTypes<span class="req">\*</span> | `ResourceType` | The type(s) of resources to search for.                                                                          |
 | groupTypes                               | `GroupType`    | If `Group` is specified in the `resourceTypes`, then this property specifies the type(s) of group to search for. |
-| endpoint                                 | `"users" | "me/people"`      | Specifies what endpoint the provider should use, either /me/people or /users                                     |
+| endpoint                                 | `"users"` &#124; `"me/people"`      | Specifies what endpoint the provider should use, either /me/people or /users                                     |
 
 ### `ResourceType`
 
